sass/_modals.scss
//
// Modals
// --------------------------------------------------

// .modal-open      - body class for killing the scroll
// .modal           - container to scroll within
// .modal-dialog    - positioning shell for the actual modal
// .modal-content   - actual modal w/ bg and corners and shit

// Kill the scroll on the body
.modal-open {
  overflow: hidden;
}

// Container that the modal scrolls within
.modal {
  display: none;
  overflow: hidden;
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: $zindex-modal;
  -webkit-overflow-scrolling: touch;

  // Prevent Chrome on Windows from adding a focus outline. For details, see
  // https://github.com/twbs/bootstrap/pull/10951.
  outline: 0;

  // When fading in the modal, animate it to slide down
  &.fade .modal-dialog {
    @include translate(0, -25%);
    @include transition-transform(0.3s ease-out);
  }
  &.in .modal-dialog {
    @include translate(0, 0)
  }

  .card {
    width: auto;
  }
}

.modal-open .modal {
  overflow-x: hidden;
  overflow-y: auto;
}

// Shell div to position the modal with bottom padding
.modal-dialog {
  position: relative;
  width: auto;
  margin: 10px;
}

// Actual modal
.modal-content {
  position: relative;
  background-color: #F0F0F0;
  border: 1px solid $modal-content-fallback-border-color; //old browsers fallback (ie8 etc)
  border: 1px solid $modal-content-border-color;
  border-radius: $border-radius-large;
  @include box-shadow(0 3px 9px rgba(0, 0, 0, .5));
  background-clip: padding-box;
  // Remove focus outline from opened modal
  outline: 0;

  border-radius: 7px;
}

// Modal background
.modal-backdrop {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: $zindex-modal-background;
  background-color: $modal-backdrop-bg;
  // Fade for backdrop
  &.fade {
    @include opacity(0);
  }
  &.in {
    @include opacity($modal-backdrop-opacity);
  }
}

// Modal header
// Top section of the modal w/ title and dismiss
.modal-header {

  min-height: ($modal-title-padding + $modal-title-line-height);
  padding: 12px;
  border-bottom: 1px solid #DEDEDE;

  background-color: #F9F9FB;
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;

  span.title,
  h1 {
    color: $charcoal;
    margin: 10px 0 10px 7px;
    font-weight: 300;
    display: inline-block;
    font-size: 19px;
    line-height: 35px;
  }

  .page-action-btns {
    float: right;
    margin: 10px 7px 10px 0;
  }

  .btn {
    // maybe make more specific or add .pull-right, as not needed for all
    // modal buttons (see creative `choose` post modal)
    //    float: right;
    margin-left: 10px;
  }
}

// Close icon
.modal-header .close {
  margin-top: -2px;
}

// Title text within header
.modal-title {
  margin: 0;
  line-height: $modal-title-line-height;
}

// Modal body
// Where all modal content resides (sibling of .modal-header and .modal-footer)
.modal-body {
  position: relative;
  padding: 15px;

  ul.dropdown-menu {
    left: auto;
  }

  .row {
    position: relative;
  }
}

// Footer (for actions)
.modal-footer {
  clear: both;
  padding: $modal-inner-padding;
  text-align: right; // right align buttons
  border-top: 1px solid $modal-footer-border-color;
  @include clearfix; // clear it in case folks use .pull-* classes on buttons

  // Properly space out buttons
  .btn + .btn {
    margin-left: 5px;
    margin-bottom: 0; // account for input[type="submit"] which gets the bottom margin like all other inputs
  }
  // but override that for button groups
  .btn-group .btn + .btn {
    margin-left: -1px;
  }
  // and override it for block buttons as well
  .btn-block + .btn-block {
    margin-left: 0;
  }
}

// Measure scrollbar width for padding body during modal show/hide
.modal-scrollbar-measure {
  position: absolute;
  top: -9999px;
  width: 50px;
  height: 50px;
  overflow: scroll;
}

// Scale up the modal
@media (min-width: $screen-sm-min) {
  // Automatically set modal's width for larger viewports
  .modal-dialog {
    width: $modal-md;
    margin: 30px auto;
  }
  .modal-content {
    @include box-shadow(0 5px 15px rgba(0, 0, 0, .5));
  }

  // Modal sizes
  .modal-sm {
    width: $modal-sm;
  }
}

@media (min-width: $screen-md-min) {
  .modal-lg {
    width: $modal-lg;
  }
}

// .modal-lg and .modal.sm are bootstrap classes
.modal-md {
  width: 800px;
}

.cn-modal {

  .modal-header {
    border-color: $form-divider;

    //    h1 {
    //      font-weight: 300;
    //      font-size: 24px;
    //    }

    h5 {
      margin-top: 0;
      font-weight: 300;
      font-size: 12px;
      //      color: $modal-text-light;
    }

    /** TEMP STYLES UNTIL WE STANDARDIZE MODALS **/
    //    background: $modal-bg !important;
  }

  //  a.btn {
  //    padding-top: 12px;
  //  }
  /** END TEMP STYLES **/
}

.modal-body {
  &.cn-list {
    overflow: auto;
  }

  h4 {
    margin: 0 0 20px;
    font-weight: 300;
  }

  .label {
    font-size: 100%;
  }

  label {
    display: block;
  }
}

.modal-content {
  background-color: $modal-bg;
  font-size: 13px;
  border-radius: $border-radius-large;
  // lazy way to maintain border radius, if gets in the way, look at
  // modal for duplicating ad sets across campaigns
  overflow: hidden;

  .dropdown-toggle {
    width: 100%;
    text-align: left;

    span {
      float: right;
      margin-top: 7px;
    }
  }

  section {
    margin-top: 0;
  }

  //h1 {
  //  margin-top: 0;
  //  color: $modal-text;
  //}

  h2 {
    color: $modal-text;
    font-weight: 300;
    line-height: 18px;
    margin: 0 0 20px;
  }

  textarea {
    margin: 0;
    width: 100%;
    border: none;
    resize: none;
    padding: 10px;
    display: block;

    &:focus {
      outline: none;
    }
  }

  .modal-header {
    h5 {
      text-transform: uppercase;

      img {
        height: 31px;
      }
    }
  }

  .modal-body {
    &.cn-list {
      padding: 0;
      border-bottom: 0;
    }

    &:last-child {
      border-bottom-left-radius: $border-radius-large;
      border-bottom-right-radius: $border-radius-large;
    }
  }

  .modal-footer {
    margin-top: 0;
    border-color: $form-divider;

    .btn {
      @include border-radius(0);
      margin: 0;
      height: 60px;
      text-transform: uppercase;
    }

    &.no-padding .btn {
      border-width: 0;
      border-left-width: 1px;

      &:first-child {
        border-left-width: 0;
      }
    }
  }

  &, p {
    font-size: 12px;
  }
}

/* The modal backdrop wasn't showing up because the height was always 0 */
.modal-backdrop {
  &.height-fix {
    height: 100%
  }
}

.modal-errors {
  margin-top: 15px;

  .list-group-item-danger {
    text-align: left;
    border-color: #A94442;
  }
}

.modal-list {
  margin-top: 15px;

  .list-group-item-info {
    text-align: left;
    border-color: #31708F;
  }

  i.glyphicon {
    font-size: 18px;
    cursor: pointer;
  }
}

.post-attachment-pagination {
  .label-primary {
    top: 40px;
    position: absolute;
    margin-left: 15px;
  }
}

.toast-container {
  > div.toast {
    background-color: $dark-grey;

    &.bg-primary,
    &.bg-info {
      color: $primary-highlight;
    }

    &.bg-danger,
    &.bg-warning,
    &.bg-error {
      color: $danger;
    }
  }
}

